--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
 		"start": "bun run ."
 	},
 	"dependencies": {
+		"@jonahsnider/util": "11.0.0",
 		"@mcap/core": "^2.1.6",
 		"@msgpack/msgpack": "^3.1.1",
 		"@sinclair/typebox": "^0.34.31",
 		"ajv": "^8.17.1",
 		"chevrotain": "11.0.3",
 		"clipanion": "^4.0.0-rc.4",
+		"temporal-polyfill": "0.3.0",
 		"typanion": "^3.14.0"
 	},
 	"devDependencies": {
