--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@msgpack/msgpack": "^3.1.1",
 		"@sinclair/typebox": "^0.34.31",
 		"ajv": "^8.17.1",
+		"better-ajv-errors": "1.2.0",
 		"chevrotain": "11.0.3",
 		"clipanion": "^4.0.0-rc.4",
 		"temporal-polyfill": "0.3.0",
@@ -70,5 +71,8 @@
 			"packageLocks": ["bun.lock"],
 			"output": []
 		}
+	},
+	"patchedDependencies": {
+		"better-ajv-errors@1.2.0": "patches/better-ajv-errors@1.2.0.patch"
 	}
 }
