--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,20 @@
 {
+	"include": ["src/**/*.ts"],
 	"compilerOptions": {
 		// Environment setup & latest features
 		"lib": ["esnext"],
 		"target": "ESNext",
-		"module": "ESNext",
+		"module": "NodeNext",
 		"moduleDetection": "force",
-		"jsx": "react-jsx",
 		"allowJs": true,
+		"resolveJsonModule": true,
 
 		// Bundler mode
-		"moduleResolution": "bundler",
-		"allowImportingTsExtensions": true,
+		"moduleResolution": "nodenext",
+		"allowImportingTsExtensions": false,
 		"verbatimModuleSyntax": true,
-		"noEmit": true,
+		"outDir": "./dist",
+		"noEmit": false,
 
 		// Best practices
 		"strict": true,
@@ -23,6 +25,6 @@
 		// Some stricter flags (disabled by default)
 		"noUnusedLocals": false,
 		"noUnusedParameters": false,
-		"noPropertyAccessFromIndexSignature": false
+		"noPropertyAccessFromIndexSignature": true
 	}
 }
